--- a/css/styles.css
+++ b/css/styles.css
@@ -26,5 +26,11 @@ p {
 ul {
   font-size: 20px;
   line-height: 30px;
-  color: #CD5C5C
+  color: #CD5C5C;
+  list-style: none;
+}
+
+body {
+  text-align: center;
+  background-color: #FFE4E1;
 }
