--- a/css/styles.css
+++ b/css/styles.css
@@ -34,3 +34,10 @@ body {
   text-align: center;
   background-color: #FFE4E1;
 }
+
+.my-titles {
+  border: 8px solid white;
+  padding: 0.01%;
+  margin: 1%;
+  background-color: #FFF0F5;
+}
